# storyteller

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
scripts/: build-docker.sh  create-gcloud-project.sh  deploy.sh
src/: lib.rs  speaker.rs
www/: index.html
