[package]
name = "storyteller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-openai = "0.17.1"
axum = { version = "0.6.18", features = ["headers"] }
clap = { version = "4.2.5", features = ["derive"] }
claxon = "0.4.3"
env_logger = "0.10.0"
futures = "0.3.28"
google-cognitive-apis = "0.2.1"
hound = "3.5.1"
http = "0.2.9"
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
stackdriver_logger = "0.8.2"
tempdir = "0.3.7"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.8"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
